add docs for stuff
