# app/Http/Controllers/Api/StuffController.php
@@ -18,9 +18,16 @@ class StuffController extends Controller
         //
     }
 
-    /**
-     * Store a newly created resource in storage.
-     */
+   /**
+ * @OA\Post(
+ *     path="/api/v1/stuff",
+ *     summary="Post new stuff to database",
+ *     tags={"Stuff"},
+ *     @OA\Response(response=200, description="Successful operation"),
+ *     @OA\Response(response=400, description="Invalid request"),
+ *     @OA\Response(response=422, description="Validation error")
+ * )
+ */
     public function store(StuffRequest $request): StuffResource
     {
         $stuff = Stuff::create($request->validated());
@@ -29,8 +36,20 @@ class StuffController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     */
+ * @OA\Get(
+ *     path="/api/v1/stuff/{device_id}",
+ *     summary="Get a single stuff using device ID",
+ *     tags={"Stuff"},
+ *     @OA\Parameter(
+ *         description="Device unique id",
+ *         in="path",
+ *         name="device_id",
+ *         required=true
+ *     ),
+ *     @OA\Response(response=200, description="Successful operation"),
+ *     @OA\Response(response=400, description="Invalid request")
+ * )
+ */
     public function show($stuff): StuffResource
     {
         $data = Stuff::where('device_id', $stuff)->first();
@@ -39,8 +58,21 @@ class StuffController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
-     */
+ * @OA\Put(
+ *     path="/api/v1/stuff/{stuff_id}",
+ *     summary="Update a single stuff",
+ *     tags={"Stuff"},
+ *     @OA\Parameter(
+ *         description="Stuff unique id",
+ *         in="path",
+ *         name="stuff_id",
+ *         required=true
+ *     ),
+ *     @OA\Response(response=200, description="Successful operation"),
+ *     @OA\Response(response=400, description="Invalid request"),
+ *     @OA\Response(response=422, description="Validation error")
+ * )
+ */
     public function update(StuffRequest $request, Stuff $stuff): StuffResource
     {
         $stuff->update($request->validated());
@@ -49,8 +81,20 @@ class StuffController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
-     */
+ * @OA\Delete(
+ *     path="/api/v1/stuff/{stuff_id}",
+ *     summary="Delete a single stuff (not in use)",
+ *     tags={"Stuff"},
+ *     @OA\Parameter(
+ *         description="Stuff unique id",
+ *         in="path",
+ *         name="stuff_id",
+ *         required=true
+ *     ),
+ *     @OA\Response(response=200, description="Successful operation"),
+ *     @OA\Response(response=400, description="Invalid request")
+ * )
+ */
     public function destroy(Stuff $stuff)
     {
         //
